landing page update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,36 @@
 
         <div class="card-deck">
             <div class="card">
+                <a href="/music-albums/moon-negativeeffect">
+                    <img src="/images/card_thumbnail_negativeeffect.jpg" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">阿滿 - 負作用 (Negative Effect)</h5>
+                    <p class="card-text">Released my second solo album on 2015.</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <a href="/music-albums/moon-spacestation">
+                    <img src="/images/card_thumbnail_spacestation.jpg" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">阿滿 - 太空站 (Space Station)</h5>
+                    <p class="card-text">Released my first solo album on 2014.</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <a href="/music-albums/mage_era-immortal">
+                    <img src="/images/card_thumbnail_immortal.jpg" class="card-img-top" alt="">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">Mage Era - Immortal</h5>
+                    <p class="card-text">Released my first band album on 2010.</p>
+                </div>
+            </div>
+
+            <div class="card">
                 <a href="/domain-warping">
                     <img src="/images/card_thumbnail_domainwarping.png" class="card-img-top" alt="">
                 </a>
