fix import type syntax bug on mobile

--- a/views/canvas-paranoia.ejs
+++ b/views/canvas-paranoia.ejs
@@ -45,4 +45,5 @@
     </div>
 </div>
 
+<script>const palettes = <%- JSON.stringify(palettes) %> </script>
 <script type="module" src="/lib/canvasParanoiaGenerator.js"></script>
