--- a/views/domain-warping.ejs
+++ b/views/domain-warping.ejs
@@ -33,4 +33,5 @@
     </div>
 </div>
 
+<script>const palettes = <%- JSON.stringify(palettes) %> </script>
 <script type="module" src="/lib/domainWarpingGenerator.js"></script>
