re-organize router

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
             </div>
 
             <div class="card">
-                <a href="/domain-warping">
+                <a href="/generative-art/domain-warping">
                     <img src="/images/card_thumbnail_domainwarping.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -60,7 +60,7 @@
             </div>
             
             <div class="card">
-                <a href="/emoji-scream">
+                <a href="/generative-art/emoji-scream">
                     <img src="/images/card_thumbnail_emojiscream.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -70,7 +70,7 @@
             </div>
             
             <div class="card">
-                <a href="/canvas-paranoia">
+                <a href="/generative-art/canvas-paranoia">
                     <img src="/images/card_thumbnail_canvasparanoia.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -80,7 +80,7 @@
             </div>
 
             <div class="card">
-                <a href="/flow-field">
+                <a href="/generative-art/flow-field">
                     <img src="/images/card_thumbnail_flowfield.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -90,7 +90,7 @@
             </div>
 
             <div class="card">
-                <a href="/snake-game">
+                <a href="/games/snake-game">
                     <img src="/images/card_thumbnail_snake.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -100,7 +100,7 @@
             </div>
 
             <div class="card">
-                <a href="/fur-out">
+                <a href="/generative-art/fur-out">
                     <img src="/images/card_thumbnail_furout.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -120,7 +120,7 @@
             </div>
 
             <div class="card">
-                <a href="/crypto-blocks">
+                <a href="/nft/crypto-blocks">
                     <img src="/images/card_thumbnail_crypto.png" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
@@ -131,7 +131,7 @@
             </div>
 
             <div class="card">
-                <a href="/sudoku">
+                <a href="/games/sudoku">
                     <img src="/images/card_thumbnail_sudoku.jpg" class="card-img-top" alt="">
                 </a>
                 <div class="card-body">
