--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -15,19 +15,19 @@
                     Generative Art
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item <% if(pageName === 'domain-warping'){%>active<%}%>" href="/domain-warping">
+                    <a class="dropdown-item <% if(pageName === 'domain-warping'){%>active<%}%>" href="/generative-art/domain-warping">
                         Domain Warping
                     </a>
-                    <a class="dropdown-item <% if(pageName === 'emoji-scream'){%>active<%}%>" href="/emoji-scream">
+                    <a class="dropdown-item <% if(pageName === 'emoji-scream'){%>active<%}%>" href="/generative-art/emoji-scream">
                         Emoji Scream
                     </a>
-                    <a class="dropdown-item <% if(pageName === 'canvas-paranoia'){%>active<%}%>" href="/canvas-paranoia">
+                    <a class="dropdown-item <% if(pageName === 'canvas-paranoia'){%>active<%}%>" href="/generative-art/canvas-paranoia">
                         Canvas Paranoia
                     </a>
-                    <a class="dropdown-item <% if(pageName === 'flow-field'){%>active<%}%>" href="/flow-field">
+                    <a class="dropdown-item <% if(pageName === 'flow-field'){%>active<%}%>" href="/generative-art/flow-field">
                         Flow Field
                     </a>
-                    <a class="dropdown-item <% if(pageName === 'fur-out'){%>active<%}%>" href="/fur-out">
+                    <a class="dropdown-item <% if(pageName === 'fur-out'){%>active<%}%>" href="/generative-art/fur-out">
                         Fur Out
                     </a>
                 </div>
@@ -42,7 +42,7 @@
                     <a class="dropdown-item <% if(pageName === 'skylines-end'){%>active<%}%>" href="/skylines-end">
                         Skyline's End
                     </a>
-                    <a class="dropdown-item <% if(pageName === 'crypto-blocks'){%>active<%}%>" href="/crypto-blocks">
+                    <a class="dropdown-item <% if(pageName === 'crypto-blocks'){%>active<%}%>" href="/nft/crypto-blocks">
                         Crypto Blocks
                     </a>
                 </div>
@@ -54,10 +54,10 @@
                     Games
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item <% if(pageName === 'snake-game'){%>active<%}%>" href="/snake-game">
+                    <a class="dropdown-item <% if(pageName === 'snake-game'){%>active<%}%>" href="/games/snake-game">
                         Snake Game
                     </a>
-                    <a class="dropdown-item <% if(pageName === 'sudoku'){%>active<%}%>" href="/sudoku">
+                    <a class="dropdown-item <% if(pageName === 'sudoku'){%>active<%}%>" href="/games/sudoku">
                         Sudoku
                     </a>
                 </div>
